manifests/api-designer/component/sso/postgresql-db.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: apicurio-sso-postgresql
  annotations:
    description: The database server's http service.
  labels:
    component: database
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    deployment: apicurio-sso-postgresql
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: database
  name: apicurio-sso-postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: apicurio-sso-postgresql
  template:
    metadata:
      labels:
        deployment: apicurio-sso-postgresql
    spec:
      containers:
        - name: apicurio-sso-postgresql
          image: quay.io/centos7/postgresql-12-centos7:1
          ports:
            - containerPort: 5432
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - mountPath: /var/lib/pgsql/data
              name: apicurio-sso-postgresql-pvol
            - mountPath: /opt/app-root/src/postgresql-start/
              name: create-databases-script
          resources:
            limits:
              cpu: 1000m
              memory: 1200Mi
            requests:
              cpu: 400m
              memory: 500Mi
      volumes:
        - name: apicurio-sso-postgresql-pvol
          persistentVolumeClaim:
            claimName: apicurio-sso-postgresql-claim
        - name: create-databases-script
          configMap:
            name: db-init-script
